# cpp_refactoring_exercise_1

./: CMakeLists.txt  Date.h  Person.h  ProgramErrors.h  Teacher.h  main.cpp  problems.txt
include/: Date.h  Person.h  ProgramErrors.h  Teacher.h
